2005-08-17  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: pass --force to gnome-doc-prepare to
	match other tools.  Fixes bug #311775.

	* macros2/gnome-autogen.sh: don't use syntax that non-GNU greps
	don't understand.  Fixes bug #313531.

2005-08-16  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: add checks for gnome-common macro
	names, and call require_m4macro for the appropriate names.  This
	can help detect $ACLOCAL_FLAGS problems earlier.  Addresses bug
	#312125.

2005-07-25  James Henstridge  <james@jamesh.id.au>

	* configure.in: bump release number.

2005-07-19  Shaun McCance  <shaunm@gnome.org>

	* macros2/gnome-autogen.sh:
	- Bumped up the default required version of gnome-doc-utils

2005-07-18  Christian Persch  <chpe@cvs.gnome.org>

	* macros2/gnome-autogen.sh:

	When configure.{in,ac} contains GNOME_DOC_INIT, actually call
	gnome-doc-prepare.

2005-03-21  Sven Herzberg  <herzi@gnome-de.org>

	* macros2/gnome-autogen.sh: added support for the gnome-doc-utils

2005-03-15  Stepan Kasal  <kasal@ucw.cz>

	* macros2/ChangeLog: Removed; the contents merged into the main one.

2005-02-11  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: preserve COPYING and INSTALL files over
	the "automake --force" call.  Fixes bug #161916.

2005-01-22  Rodney Dawes  <dobey@novell.com>

	* macros2/gnome-autogen.sh: Fix the (AC|IT)_PROG_INTLTOOL support
	for both places where we grep for it
	(version_check): If we are checking for automake = 1.4, then make
	sure we error out with that error when we find it, and not >= 1.4
	since we don't actually check for >= 1.4

	Fixes #129903

2005-01-03  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-common.m4 (GNOME_COMMON_INIT): add some code to
	add the directory given to AC_CONFIG_MACRO_DIR to ACLOCAL_FLAGS.

	* doc-build/xmldocs.make (clean-local-doc): add rule to clean up
	copied entities if srcdir!=builddir.
