@@ -91,8 +91,9 @@ version_check() {
                                sed 's/^.*[ 	]\([0-9.]*[a-z]*\).*$/\1/'`
 	    if compare_versions $vc_min_version $vc_actual_version; then
 		echo "found $vc_actual_version"
-		# set variable
-		eval "$vc_variable=$vc_checkprog"
+		# set variables
+		eval "$vc_variable=$vc_checkprog; \
+			${vc_variable}_VERSION=$vc_actual_version"
 		vc_status=0
 		break
 	    else
